// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordeon /> with an ID matches with snapshot 1`] = `
<div
  className="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="custom_id-custom_id-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="custom_id-custom_id-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="#222"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          version="solid"
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="custom_id-custom_id-0_header"
      className="k-Accordeon__content"
      id="custom_id-custom_id-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="custom_id-custom_id-1_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="custom_id-custom_id-1_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="#222"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          version="solid"
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="custom_id-custom_id-1_header"
      className="k-Accordeon__content"
      id="custom_id-custom_id-1_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`<Accordeon /> with an variant matches with snapshot 1`] = `
<div
  className="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--orion k-Accordeon--isAnimated"
>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="#222"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          version="solid"
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-0_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-1_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-1_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="#222"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          version="solid"
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-1_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-1_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`<Accordeon /> with isAnimated prop set to \`false\` matches with snapshot 1`] = `
<Accordeon
  closeOnClick={false}
  id="accordeon"
  isAnimated={false}
  onChange={[Function]}
  selectedItem={null}
  variant="andromeda"
>
  <styled.div
    className="k-Accordeon k-Accordeon--andromeda"
  >
    <StyledComponent
      className="k-Accordeon k-Accordeon--andromeda"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "BhYzt",
            "rules": Array [
              ".k-Accordeon__item ~ .k-Accordeon__item{margin-top:",
              "0.9375rem",
              ";}.k-Accordeon__header{display:block;margin:0;width:100%;box-sizing:border-box;overflow:visible;background:transparent;border:",
              "0.125rem",
              " solid ",
              "#eee",
              ";font:inherit;color:inherit;background-color:transparent;cursor:pointer;text-align:left;}.k-Accordeon__header:focus,.k-Accordeon__header:focus + .k-Accordeon__content{outline:none;border-color:",
              "#19b4fa",
              ";}.k-Accordeon__content{",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 400;",
              " box-sizing:border-box;visibility:visible;overflow:visible;height:auto;border:",
              "0.125rem",
              " solid ",
              "#eee",
              ";border-top:0;visibility:visible;opacity:1;max-height:var(--accordeon-content-max-height,unset);&[aria-hidden='true']{visibility:hidden;opacity:0;--accordeon-content-max-height:0 !important;}}&.k-Accordeon--isAnimated .k-Accordeon__header{transition:border 0.4s ease,border-radius 0.4s ease;transition-delay:0s;&[aria-hidden='true']{transition-delay:0.4s;}}&.k-Accordeon--isAnimated .k-Accordeon__content{overflow:hidden;transition:visibility 0s ease,all 0.4s ease;transition-delay:0s,0s,0s;&[aria-hidden='true']{transition-delay:0.4s,0s,0s;}}@media (prefers-reduced-motion:reduce){&.k-Accordeon--isAnimated{.k-Accordeon__header,.k-Accordeon__content{transition:none !important;}}}&.k-Accordeon--andromeda{.k-Accordeon__header{",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 400;",
              " padding:",
              "1.25rem",
              ";min-height:",
              "1.875rem",
              ";border-radius:",
              "0.1875rem",
              ";.k-Accordeon__header__arrow{display:none;}}.k-Accordeon__content{background-color:",
              "#f6f6f6",
              ";border-bottom-left-radius:",
              "0.1875rem",
              ";border-bottom-right-radius:",
              "0.1875rem",
              ";padding:",
              "0.00625rem",
              " ",
              "1.875rem",
              ";}.k-Accordeon__content_marger{padding-top:",
              "1.875rem",
              ";padding-bottom:",
              "1.875rem",
              ";}}&.k-Accordeon--orion{.k-Accordeon__header{position:relative;padding:",
              "1.5625rem",
              " ",
              "3.125rem",
              " ",
              "1.5625rem",
              " ",
              "1.875rem",
              ";",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 500;",
              " min-height:",
              "3.125rem",
              ";border-radius:",
              "0.375rem",
              ";@media (min-width:",
              "640",
              "px){min-height:",
              "4.375rem",
              ";border-radius:",
              "0.5rem",
              ";}&[aria-expanded='true']{border-bottom-color:",
              "#fff",
              ";}.k-Accordeon__header__arrow{position:absolute;top:0;bottom:0;right:",
              "1.25rem",
              ";display:flex;align-items:center;}}.k-Accordeon__content{background-color:",
              "#fff",
              ";border-bottom-left-radius:",
              "0.375rem",
              ";border-bottom-right-radius:",
              "0.375rem",
              ";padding:",
              "0.00625rem",
              " ",
              "1.875rem",
              ";@media (min-width:",
              "640",
              "px){border-bottom-left-radius:",
              "0.5rem",
              ";border-bottom-right-radius:",
              "0.5rem",
              ";}.k-Accordeon__content_marger{padding-bottom:",
              "1.875rem",
              ";}}}.k-Accordeon__header[aria-expanded='true']{border-bottom-left-radius:0;border-bottom-right-radius:0;}",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={
        Object {
          "current": <div
            class="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda"
          >
            <div
              class="k-Accordeon__item"
            >
              <button
                aria-controls="accordeon-accordeon-0_content"
                aria-disabled="false"
                aria-expanded="false"
                class="k-Accordeon__header"
                id="accordeon-accordeon-0_header"
                role="button"
              >
                <span
                  class="k-Accordeon__header__content"
                >
                  Header
                </span>
                <span
                  class="k-Accordeon__header__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="#222"
                    height="5.64"
                    style="transform: rotate(180deg);"
                    version="solid"
                    viewBox="0 0 8.48 5.64"
                    width="8.48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                aria-labelledby="accordeon-accordeon-0_header"
                class="k-Accordeon__content"
                id="accordeon-accordeon-0_content"
                style="--accordeon-content-max-height: 0;"
              >
                <div
                  class="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </div>
            <div
              class="k-Accordeon__item"
            >
              <button
                aria-controls="accordeon-accordeon-1_content"
                aria-disabled="false"
                aria-expanded="false"
                class="k-Accordeon__header"
                id="accordeon-accordeon-1_header"
                role="button"
              >
                <span
                  class="k-Accordeon__header__content"
                >
                  Header
                </span>
                <span
                  class="k-Accordeon__header__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="#222"
                    height="5.64"
                    style="transform: rotate(180deg);"
                    version="solid"
                    viewBox="0 0 8.48 5.64"
                    width="8.48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                aria-labelledby="accordeon-accordeon-1_header"
                class="k-Accordeon__content"
                id="accordeon-accordeon-1_content"
                style="--accordeon-content-max-height: 0;"
              >
                <div
                  class="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </div>
          </div>,
        }
      }
    >
      <div
        className="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda"
      >
        <Item
          id="accordeon-0"
          index={0}
          key="accordeon-0"
        >
          <div
            className="k-Accordeon__item"
          >
            <Header
              id="accordeon-0"
              index={0}
              key=".0"
            >
              <button
                aria-controls="accordeon-accordeon-0_content"
                aria-disabled={false}
                aria-expanded={false}
                className="k-Accordeon__header"
                id="accordeon-accordeon-0_header"
                onClick={[Function]}
                role="button"
              >
                <span
                  className="k-Accordeon__header__content"
                >
                  Header
                </span>
                <span
                  className="k-Accordeon__header__arrow"
                >
                  <ArrowIcon
                    aria-hidden={true}
                    className=""
                    color="#222"
                    direction="bottom"
                    disabled={false}
                    height="5.64"
                    title=""
                    version="solid"
                    width="8.48"
                  >
                    <svg
                      aria-hidden={true}
                      className=""
                      fill="#222"
                      height="5.64"
                      style={
                        Object {
                          "transform": "rotate(180deg)",
                        }
                      }
                      version="solid"
                      viewBox="0 0 8.48 5.64"
                      width="8.48"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                      />
                    </svg>
                  </ArrowIcon>
                </span>
              </button>
            </Header>
            <Content
              id="accordeon-0"
              index={0}
              key=".1"
            >
              <div
                aria-hidden={true}
                aria-labelledby="accordeon-accordeon-0_header"
                className="k-Accordeon__content"
                id="accordeon-accordeon-0_content"
                style={
                  Object {
                    "--accordeon-content-max-height": 0,
                  }
                }
              >
                <div
                  className="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </Content>
          </div>
        </Item>
        <Item
          id="accordeon-1"
          index={1}
          key="accordeon-1"
        >
          <div
            className="k-Accordeon__item"
          >
            <Header
              id="accordeon-1"
              index={1}
              key=".0"
            >
              <button
                aria-controls="accordeon-accordeon-1_content"
                aria-disabled={false}
                aria-expanded={false}
                className="k-Accordeon__header"
                id="accordeon-accordeon-1_header"
                onClick={[Function]}
                role="button"
              >
                <span
                  className="k-Accordeon__header__content"
                >
                  Header
                </span>
                <span
                  className="k-Accordeon__header__arrow"
                >
                  <ArrowIcon
                    aria-hidden={true}
                    className=""
                    color="#222"
                    direction="bottom"
                    disabled={false}
                    height="5.64"
                    title=""
                    version="solid"
                    width="8.48"
                  >
                    <svg
                      aria-hidden={true}
                      className=""
                      fill="#222"
                      height="5.64"
                      style={
                        Object {
                          "transform": "rotate(180deg)",
                        }
                      }
                      version="solid"
                      viewBox="0 0 8.48 5.64"
                      width="8.48"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                      />
                    </svg>
                  </ArrowIcon>
                </span>
              </button>
            </Header>
            <Content
              id="accordeon-1"
              index={1}
              key=".1"
            >
              <div
                aria-hidden={true}
                aria-labelledby="accordeon-accordeon-1_header"
                className="k-Accordeon__content"
                id="accordeon-accordeon-1_content"
                style={
                  Object {
                    "--accordeon-content-max-height": 0,
                  }
                }
              >
                <div
                  className="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </Content>
          </div>
        </Item>
      </div>
    </StyledComponent>
  </styled.div>
</Accordeon>
`;

exports[`<Accordeon /> with one item matches with snapshot 1`] = `
<div
  className="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="#222"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          version="solid"
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-0_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`<Accordeon /> with the first selected item matches with snapshot 1`] = `
<Accordeon
  closeOnClick={false}
  id="accordeon"
  isAnimated={true}
  onChange={[Function]}
  selectedItem={0}
  variant="andromeda"
>
  <styled.div
    className="k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
  >
    <StyledComponent
      className="k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "BhYzt",
            "rules": Array [
              ".k-Accordeon__item ~ .k-Accordeon__item{margin-top:",
              "0.9375rem",
              ";}.k-Accordeon__header{display:block;margin:0;width:100%;box-sizing:border-box;overflow:visible;background:transparent;border:",
              "0.125rem",
              " solid ",
              "#eee",
              ";font:inherit;color:inherit;background-color:transparent;cursor:pointer;text-align:left;}.k-Accordeon__header:focus,.k-Accordeon__header:focus + .k-Accordeon__content{outline:none;border-color:",
              "#19b4fa",
              ";}.k-Accordeon__content{",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 400;",
              " box-sizing:border-box;visibility:visible;overflow:visible;height:auto;border:",
              "0.125rem",
              " solid ",
              "#eee",
              ";border-top:0;visibility:visible;opacity:1;max-height:var(--accordeon-content-max-height,unset);&[aria-hidden='true']{visibility:hidden;opacity:0;--accordeon-content-max-height:0 !important;}}&.k-Accordeon--isAnimated .k-Accordeon__header{transition:border 0.4s ease,border-radius 0.4s ease;transition-delay:0s;&[aria-hidden='true']{transition-delay:0.4s;}}&.k-Accordeon--isAnimated .k-Accordeon__content{overflow:hidden;transition:visibility 0s ease,all 0.4s ease;transition-delay:0s,0s,0s;&[aria-hidden='true']{transition-delay:0.4s,0s,0s;}}@media (prefers-reduced-motion:reduce){&.k-Accordeon--isAnimated{.k-Accordeon__header,.k-Accordeon__content{transition:none !important;}}}&.k-Accordeon--andromeda{.k-Accordeon__header{",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 400;",
              " padding:",
              "1.25rem",
              ";min-height:",
              "1.875rem",
              ";border-radius:",
              "0.1875rem",
              ";.k-Accordeon__header__arrow{display:none;}}.k-Accordeon__content{background-color:",
              "#f6f6f6",
              ";border-bottom-left-radius:",
              "0.1875rem",
              ";border-bottom-right-radius:",
              "0.1875rem",
              ";padding:",
              "0.00625rem",
              " ",
              "1.875rem",
              ";}.k-Accordeon__content_marger{padding-top:",
              "1.875rem",
              ";padding-bottom:",
              "1.875rem",
              ";}}&.k-Accordeon--orion{.k-Accordeon__header{position:relative;padding:",
              "1.5625rem",
              " ",
              "3.125rem",
              " ",
              "1.5625rem",
              " ",
              "1.875rem",
              ";",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 500;",
              " min-height:",
              "3.125rem",
              ";border-radius:",
              "0.375rem",
              ";@media (min-width:",
              "640",
              "px){min-height:",
              "4.375rem",
              ";border-radius:",
              "0.5rem",
              ";}&[aria-expanded='true']{border-bottom-color:",
              "#fff",
              ";}.k-Accordeon__header__arrow{position:absolute;top:0;bottom:0;right:",
              "1.25rem",
              ";display:flex;align-items:center;}}.k-Accordeon__content{background-color:",
              "#fff",
              ";border-bottom-left-radius:",
              "0.375rem",
              ";border-bottom-right-radius:",
              "0.375rem",
              ";padding:",
              "0.00625rem",
              " ",
              "1.875rem",
              ";@media (min-width:",
              "640",
              "px){border-bottom-left-radius:",
              "0.5rem",
              ";border-bottom-right-radius:",
              "0.5rem",
              ";}.k-Accordeon__content_marger{padding-bottom:",
              "1.875rem",
              ";}}}.k-Accordeon__header[aria-expanded='true']{border-bottom-left-radius:0;border-bottom-right-radius:0;}",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={
        Object {
          "current": <div
            class="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
          >
            <div
              class="k-Accordeon__item"
            >
              <button
                aria-controls="accordeon-accordeon-0_content"
                aria-disabled="true"
                aria-expanded="true"
                class="k-Accordeon__header"
                id="accordeon-accordeon-0_header"
                role="button"
              >
                <span
                  class="k-Accordeon__header__content"
                >
                  Header
                </span>
                <span
                  class="k-Accordeon__header__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="#222"
                    height="5.64"
                    version="solid"
                    viewBox="0 0 8.48 5.64"
                    width="8.48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="false"
                aria-labelledby="accordeon-accordeon-0_header"
                class="k-Accordeon__content"
                id="accordeon-accordeon-0_content"
                style="--accordeon-content-max-height: 0;"
              >
                <div
                  class="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </div>
            <div
              class="k-Accordeon__item"
            >
              <button
                aria-controls="accordeon-accordeon-1_content"
                aria-disabled="false"
                aria-expanded="false"
                class="k-Accordeon__header"
                id="accordeon-accordeon-1_header"
                role="button"
              >
                <span
                  class="k-Accordeon__header__content"
                >
                  Header
                </span>
                <span
                  class="k-Accordeon__header__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="#222"
                    height="5.64"
                    style="transform: rotate(180deg);"
                    version="solid"
                    viewBox="0 0 8.48 5.64"
                    width="8.48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                aria-labelledby="accordeon-accordeon-1_header"
                class="k-Accordeon__content"
                id="accordeon-accordeon-1_content"
                style="--accordeon-content-max-height: 0;"
              >
                <div
                  class="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </div>
          </div>,
        }
      }
    >
      <div
        className="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
      >
        <Item
          id="accordeon-0"
          index={0}
          key="accordeon-0"
        >
          <div
            className="k-Accordeon__item"
          >
            <Header
              id="accordeon-0"
              index={0}
              key=".0"
            >
              <button
                aria-controls="accordeon-accordeon-0_content"
                aria-disabled={true}
                aria-expanded={true}
                className="k-Accordeon__header"
                id="accordeon-accordeon-0_header"
                onClick={[Function]}
                role="button"
              >
                <span
                  className="k-Accordeon__header__content"
                >
                  Header
                </span>
                <span
                  className="k-Accordeon__header__arrow"
                >
                  <ArrowIcon
                    aria-hidden={true}
                    className=""
                    color="#222"
                    direction="top"
                    disabled={false}
                    height="5.64"
                    title=""
                    version="solid"
                    width="8.48"
                  >
                    <svg
                      aria-hidden={true}
                      className=""
                      fill="#222"
                      height="5.64"
                      style={
                        Object {
                          "transform": null,
                        }
                      }
                      version="solid"
                      viewBox="0 0 8.48 5.64"
                      width="8.48"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                      />
                    </svg>
                  </ArrowIcon>
                </span>
              </button>
            </Header>
            <Content
              id="accordeon-0"
              index={0}
              key=".1"
            >
              <div
                aria-hidden={false}
                aria-labelledby="accordeon-accordeon-0_header"
                className="k-Accordeon__content"
                id="accordeon-accordeon-0_content"
                style={
                  Object {
                    "--accordeon-content-max-height": 0,
                  }
                }
              >
                <div
                  className="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </Content>
          </div>
        </Item>
        <Item
          id="accordeon-1"
          index={1}
          key="accordeon-1"
        >
          <div
            className="k-Accordeon__item"
          >
            <Header
              id="accordeon-1"
              index={1}
              key=".0"
            >
              <button
                aria-controls="accordeon-accordeon-1_content"
                aria-disabled={false}
                aria-expanded={false}
                className="k-Accordeon__header"
                id="accordeon-accordeon-1_header"
                onClick={[Function]}
                role="button"
              >
                <span
                  className="k-Accordeon__header__content"
                >
                  Header
                </span>
                <span
                  className="k-Accordeon__header__arrow"
                >
                  <ArrowIcon
                    aria-hidden={true}
                    className=""
                    color="#222"
                    direction="bottom"
                    disabled={false}
                    height="5.64"
                    title=""
                    version="solid"
                    width="8.48"
                  >
                    <svg
                      aria-hidden={true}
                      className=""
                      fill="#222"
                      height="5.64"
                      style={
                        Object {
                          "transform": "rotate(180deg)",
                        }
                      }
                      version="solid"
                      viewBox="0 0 8.48 5.64"
                      width="8.48"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                      />
                    </svg>
                  </ArrowIcon>
                </span>
              </button>
            </Header>
            <Content
              id="accordeon-1"
              index={1}
              key=".1"
            >
              <div
                aria-hidden={true}
                aria-labelledby="accordeon-accordeon-1_header"
                className="k-Accordeon__content"
                id="accordeon-accordeon-1_content"
                style={
                  Object {
                    "--accordeon-content-max-height": 0,
                  }
                }
              >
                <div
                  className="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </Content>
          </div>
        </Item>
      </div>
    </StyledComponent>
  </styled.div>
</Accordeon>
`;

exports[`<Accordeon /> with the second selected item after click simulate matches with snapshot 1`] = `
<Accordeon
  closeOnClick={false}
  id="accordeon"
  isAnimated={true}
  onChange={[Function]}
  selectedItem={null}
  variant="andromeda"
>
  <styled.div
    className="k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
  >
    <StyledComponent
      className="k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "BhYzt",
            "rules": Array [
              ".k-Accordeon__item ~ .k-Accordeon__item{margin-top:",
              "0.9375rem",
              ";}.k-Accordeon__header{display:block;margin:0;width:100%;box-sizing:border-box;overflow:visible;background:transparent;border:",
              "0.125rem",
              " solid ",
              "#eee",
              ";font:inherit;color:inherit;background-color:transparent;cursor:pointer;text-align:left;}.k-Accordeon__header:focus,.k-Accordeon__header:focus + .k-Accordeon__content{outline:none;border-color:",
              "#19b4fa",
              ";}.k-Accordeon__content{",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 400;",
              " box-sizing:border-box;visibility:visible;overflow:visible;height:auto;border:",
              "0.125rem",
              " solid ",
              "#eee",
              ";border-top:0;visibility:visible;opacity:1;max-height:var(--accordeon-content-max-height,unset);&[aria-hidden='true']{visibility:hidden;opacity:0;--accordeon-content-max-height:0 !important;}}&.k-Accordeon--isAnimated .k-Accordeon__header{transition:border 0.4s ease,border-radius 0.4s ease;transition-delay:0s;&[aria-hidden='true']{transition-delay:0.4s;}}&.k-Accordeon--isAnimated .k-Accordeon__content{overflow:hidden;transition:visibility 0s ease,all 0.4s ease;transition-delay:0s,0s,0s;&[aria-hidden='true']{transition-delay:0.4s,0s,0s;}}@media (prefers-reduced-motion:reduce){&.k-Accordeon--isAnimated{.k-Accordeon__header,.k-Accordeon__content{transition:none !important;}}}&.k-Accordeon--andromeda{.k-Accordeon__header{",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 400;",
              " padding:",
              "1.25rem",
              ";min-height:",
              "1.875rem",
              ";border-radius:",
              "0.1875rem",
              ";.k-Accordeon__header__arrow{display:none;}}.k-Accordeon__content{background-color:",
              "#f6f6f6",
              ";border-bottom-left-radius:",
              "0.1875rem",
              ";border-bottom-right-radius:",
              "0.1875rem",
              ";padding:",
              "0.00625rem",
              " ",
              "1.875rem",
              ";}.k-Accordeon__content_marger{padding-top:",
              "1.875rem",
              ";padding-bottom:",
              "1.875rem",
              ";}}&.k-Accordeon--orion{.k-Accordeon__header{position:relative;padding:",
              "1.5625rem",
              " ",
              "3.125rem",
              " ",
              "1.5625rem",
              " ",
              "1.875rem",
              ";",
              "font-family: Maax, Helvetica, Arial, sans-serif;",
              "font-weight: 500;",
              " min-height:",
              "3.125rem",
              ";border-radius:",
              "0.375rem",
              ";@media (min-width:",
              "640",
              "px){min-height:",
              "4.375rem",
              ";border-radius:",
              "0.5rem",
              ";}&[aria-expanded='true']{border-bottom-color:",
              "#fff",
              ";}.k-Accordeon__header__arrow{position:absolute;top:0;bottom:0;right:",
              "1.25rem",
              ";display:flex;align-items:center;}}.k-Accordeon__content{background-color:",
              "#fff",
              ";border-bottom-left-radius:",
              "0.375rem",
              ";border-bottom-right-radius:",
              "0.375rem",
              ";padding:",
              "0.00625rem",
              " ",
              "1.875rem",
              ";@media (min-width:",
              "640",
              "px){border-bottom-left-radius:",
              "0.5rem",
              ";border-bottom-right-radius:",
              "0.5rem",
              ";}.k-Accordeon__content_marger{padding-bottom:",
              "1.875rem",
              ";}}}.k-Accordeon__header[aria-expanded='true']{border-bottom-left-radius:0;border-bottom-right-radius:0;}",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={
        Object {
          "current": <div
            class="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
          >
            <div
              class="k-Accordeon__item"
            >
              <button
                aria-controls="accordeon-accordeon-0_content"
                aria-disabled="false"
                aria-expanded="false"
                class="k-Accordeon__header"
                id="accordeon-accordeon-0_header"
                role="button"
              >
                <span
                  class="k-Accordeon__header__content"
                >
                  Header #1
                </span>
                <span
                  class="k-Accordeon__header__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="#222"
                    height="5.64"
                    style="transform: rotate(180deg);"
                    version="solid"
                    viewBox="0 0 8.48 5.64"
                    width="8.48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                aria-labelledby="accordeon-accordeon-0_header"
                class="k-Accordeon__content"
                id="accordeon-accordeon-0_content"
                style="--accordeon-content-max-height: 0;"
              >
                <div
                  class="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </div>
            <div
              class="k-Accordeon__item"
            >
              <button
                aria-controls="accordeon-accordeon-1_content"
                aria-disabled="true"
                aria-expanded="true"
                class="k-Accordeon__header"
                id="accordeon-accordeon-1_header"
                role="button"
              >
                <span
                  class="k-Accordeon__header__content"
                >
                  Header #2
                </span>
                <span
                  class="k-Accordeon__header__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="#222"
                    height="5.64"
                    style=""
                    version="solid"
                    viewBox="0 0 8.48 5.64"
                    width="8.48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="false"
                aria-labelledby="accordeon-accordeon-1_header"
                class="k-Accordeon__content"
                id="accordeon-accordeon-1_content"
                style="--accordeon-content-max-height: 0;"
              >
                <div
                  class="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </div>
          </div>,
        }
      }
    >
      <div
        className="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
      >
        <Item
          id="accordeon-0"
          index={0}
          key="accordeon-0"
        >
          <div
            className="k-Accordeon__item"
          >
            <Header
              id="accordeon-0"
              index={0}
              key=".0"
            >
              <button
                aria-controls="accordeon-accordeon-0_content"
                aria-disabled={false}
                aria-expanded={false}
                className="k-Accordeon__header"
                id="accordeon-accordeon-0_header"
                onClick={[Function]}
                role="button"
              >
                <span
                  className="k-Accordeon__header__content"
                >
                  Header #1
                </span>
                <span
                  className="k-Accordeon__header__arrow"
                >
                  <ArrowIcon
                    aria-hidden={true}
                    className=""
                    color="#222"
                    direction="bottom"
                    disabled={false}
                    height="5.64"
                    title=""
                    version="solid"
                    width="8.48"
                  >
                    <svg
                      aria-hidden={true}
                      className=""
                      fill="#222"
                      height="5.64"
                      style={
                        Object {
                          "transform": "rotate(180deg)",
                        }
                      }
                      version="solid"
                      viewBox="0 0 8.48 5.64"
                      width="8.48"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                      />
                    </svg>
                  </ArrowIcon>
                </span>
              </button>
            </Header>
            <Content
              id="accordeon-0"
              index={0}
              key=".1"
            >
              <div
                aria-hidden={true}
                aria-labelledby="accordeon-accordeon-0_header"
                className="k-Accordeon__content"
                id="accordeon-accordeon-0_content"
                style={
                  Object {
                    "--accordeon-content-max-height": 0,
                  }
                }
              >
                <div
                  className="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </Content>
          </div>
        </Item>
        <Item
          id="accordeon-1"
          index={1}
          key="accordeon-1"
        >
          <div
            className="k-Accordeon__item"
          >
            <Header
              id="accordeon-1"
              index={1}
              key=".0"
            >
              <button
                aria-controls="accordeon-accordeon-1_content"
                aria-disabled={true}
                aria-expanded={true}
                className="k-Accordeon__header"
                id="accordeon-accordeon-1_header"
                onClick={[Function]}
                role="button"
              >
                <span
                  className="k-Accordeon__header__content"
                >
                  Header #2
                </span>
                <span
                  className="k-Accordeon__header__arrow"
                >
                  <ArrowIcon
                    aria-hidden={true}
                    className=""
                    color="#222"
                    direction="top"
                    disabled={false}
                    height="5.64"
                    title=""
                    version="solid"
                    width="8.48"
                  >
                    <svg
                      aria-hidden={true}
                      className=""
                      fill="#222"
                      height="5.64"
                      style={
                        Object {
                          "transform": null,
                        }
                      }
                      version="solid"
                      viewBox="0 0 8.48 5.64"
                      width="8.48"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
                      />
                    </svg>
                  </ArrowIcon>
                </span>
              </button>
            </Header>
            <Content
              id="accordeon-1"
              index={1}
              key=".1"
            >
              <div
                aria-hidden={false}
                aria-labelledby="accordeon-accordeon-1_header"
                className="k-Accordeon__content"
                id="accordeon-accordeon-1_content"
                style={
                  Object {
                    "--accordeon-content-max-height": 0,
                  }
                }
              >
                <div
                  className="k-Accordeon__content_marger"
                >
                  Content
                </div>
                <div />
              </div>
            </Content>
          </div>
        </Item>
      </div>
    </StyledComponent>
  </styled.div>
</Accordeon>
`;

exports[`<Accordeon /> with two items matches with snapshot 1`] = `
<div
  className="sc-bdVaJa BhYzt k-Accordeon k-Accordeon--andromeda k-Accordeon--isAnimated"
>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-0_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-0_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="#222"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          version="solid"
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-0_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-0_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
  <div
    className="k-Accordeon__item"
  >
    <button
      aria-controls="accordeon-accordeon-1_content"
      aria-disabled={false}
      aria-expanded={false}
      className="k-Accordeon__header"
      id="accordeon-accordeon-1_header"
      onClick={[Function]}
      role="button"
    >
      <span
        className="k-Accordeon__header__content"
      >
        Header
      </span>
      <span
        className="k-Accordeon__header__arrow"
      >
        <svg
          aria-hidden={true}
          className=""
          fill="#222"
          height="5.64"
          style={
            Object {
              "transform": "rotate(180deg)",
            }
          }
          version="solid"
          viewBox="0 0 8.48 5.64"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
          />
        </svg>
      </span>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="accordeon-accordeon-1_header"
      className="k-Accordeon__content"
      id="accordeon-accordeon-1_content"
      style={
        Object {
          "--accordeon-content-max-height": 0,
        }
      }
    >
      <div
        className="k-Accordeon__content_marger"
      >
        Content
      </div>
      <div />
    </div>
  </div>
</div>
`;
